# GithubReadme-Generator

./: .env.example  .gitignore  LICENSE  OPTIMIZATION_SUMMARY.md  README.md  pyproject.toml  run_website.bat
scripts/: test_local_analysis.py
src/: main.py  web.py
src/agents/: nodes.py  prompts.py
src/analysis/: builder.py  graph.py  model_caps.py  parser.py
src/core/: config.py  constants.py  graph.py  llm_factory.py  memory.py  state.py  workflow.py
src/ingestion/: context_processor.py  github_client.py  repo_manager.py
src/tools/: badges.py
src/ui/: components.py  constants.py  dashboard.py  settings.py  styles.py
src/utils/: __init__.py  file_utils.py  token_utils.py
